--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
@@ -57,5 +57,11 @@
     -fx-background-image: url("https://i.imgur.com/6r6VJDf.png");
     -fx-background-repeat: no-repeat;
     -fx-background-size: cover;
+}
 
+.loadingGif {
+    -fx-background-image: url("https://i.imgur.com/6Xg4uVF.gif");
+    -fx-background-repeat: no-repeat;
+    -fx-background-size: contain;
+    -fx-background-position: center;
 }
